🔧 Fix CSP: Download Chart.js and PapaParse locally

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Co-relation between height & wealth/fame</title>
     <meta name="description" content="Interactive visualization of famous wealthy people's height vs wealth distribution">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+    <script src="js/chart.min.js"></script>
+    <script src="js/papaparse.min.js"></script>
     <link rel="stylesheet" href="styles.css?v=3">
 </head>
 <body>
