--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                                                 <option value="5.7">5'7"</option>
                                                 <option value="5.8">5'8"</option>
                                                 <option value="5.9">5'9"</option>
+                                                <option value="5.83">5'10"</option>
+                                                <option value="5.92">5'11"</option>
                                                 <option value="6.0">6'0"</option>
                                                 <option value="6.1">6'1"</option>
                                                 <option value="6.2">6'2"</option>
